istio-ingress-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: istio-ingress
spec: {}
status: {}
