helloworld-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: helloworld-virtual-service
  namespace: helloworld
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/public-gateway
  http:
  - name: gateway-to-helloworld
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: helloworld.helloworld.svc.cluster.local
